--- a/business_theme/templates/pages/index.html
+++ b/business_theme/templates/pages/index.html
@@ -3,6 +3,9 @@
 
 {% block extra_css %}
 <link rel="stylesheet" href="{% static "css/index.css" %}">
+{% endblock %}
+
+{% block extra_head %}
 <link rel="stylesheet" href="{% static "media/uploads/index.css" %}">
 {% endblock %}
 
