--- a/business_theme/templates/pages/index.html
+++ b/business_theme/templates/pages/index.html
@@ -24,14 +24,17 @@
 {% if page.homepage.slides.all %}
 <section class="no-margin">
         <div class="carousel slide wet-asphalt" data-ride="carousel" id="main-slider">
+            {% if page.homepage.slides.all|length >= 2 %}
             <ol class="carousel-indicators">
                 {% for slide in page.homepage.slides.all %}
                     
                 <li data-slide-to="{{ forloop.counter0 }}" data-target="#main-slider" {% if forloop.first %}class="active"{% endif %}></li>
  
-                 {% endfor %}  
+                {% endfor %}  
 
             </ol>
+            {% endif %}
+
             <div class="carousel-inner" role="listbox">
 				 {% for slide in page.homepage.slides.all %}
                 <div style="background-image: url({{ MEDIA_URL }}{% thumbnail slide.image 1920 690 %})" class="item{% if forloop.first %} active{% endif %}">
@@ -40,12 +43,14 @@
  
                  {% endfor %}  
             </div><!--/.carousel-inner-->
+            {% if page.homepage.slides.all|length >= 2 %}
             <a data-slide="prev" href="#main-slider" class="prev hidden-xs left carousel-control" role="button">
                 <i class="icon-angle-left"></i>
             </a>
             <a data-slide="next" href="#main-slider" class="next hidden-xs right carousel-control" role="button">
                 <i class="icon-angle-right"></i>
             </a>
+            {% endif %}
         </div><!--/.carousel-->
 
  </section>   
