--- a/business_theme/static/css/index.css
+++ b/business_theme/static/css/index.css
@@ -12,12 +12,7 @@
   #main-slider .carousel h2 {
     font-size: 36px;
   }
-  #main-slider .carousel .btn {
-    border: 3px solid rgba(255, 255, 255, 0.5);
-    color: #fff;
-    border-radius: 0;
-    margin-top: 5px;
-  }
+
   #main-slider .carousel .btn:hover {
     background-color: rgba(255, 255, 255, 0.3);
   }
@@ -54,8 +49,8 @@
     transition: opacity ease-in-out 500ms;
     z-index: 1;
   }
-  #main-slider .prev,
-  #main-slider .next {
+  /* #main-slider .left,
+  #main-slider .right {
     position: absolute;
     top: 50%;
     background-color: rgba(0, 0, 0, 0.3);
@@ -70,17 +65,17 @@
     border-radius: 4px;
     z-index: 5;
   }
-  #main-slider .prev:hover,
-  #main-slider .next:hover {
+  #main-slider .left:hover,
+  #main-slider .right:hover {
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 10px;
   }
-  #main-slider .prev {
+  #main-slider .left {
     left: 10px;
   }
-  #main-slider .next {
+  #main-slider .right {
     right: 10px;
-  }
+  } */
   #main-slider .active .animation.animated-item-1 {
     -webkit-animation: fadeInUp 300ms linear 300ms both;
     -moz-animation: fadeInUp 300ms linear 300ms both;
@@ -109,3 +104,42 @@
     -ms-animation: fadeInUp 300ms linear 1200ms both;
     animation: fadeInUp 300ms linear 1200ms both;
   }
+
+
+
+  
+#main-slider .carousel-indicators {
+  margin: 10px 0 0;
+  overflow: auto;
+  position: static;
+  text-align: left;
+  white-space: nowrap;
+  width: 100%;
+}
+
+#main-slider .carousel-indicators li {
+  background-color: transparent;
+  -webkit-border-radius: 0;
+  border-radius: 0;
+  display: inline-block;
+  height: auto;
+  margin: 0 !important;
+  width: auto;
+}
+
+#main-slider .carousel-indicators li img {
+  display: block;
+  opacity: 0.5;
+}
+
+#main-slider .carousel-indicators li.active img {
+  opacity: 1;
+}
+
+#main-slider .carousel-indicators li:hover img {
+  opacity: 0.75;
+}
+
+#main-slider .carousel-outer {
+  position: relative;
+}
