--- a/business_theme/templates/pages/index.html
+++ b/business_theme/templates/pages/index.html
@@ -46,6 +46,17 @@
 {% block meta_keywords %}{% if page.meta_keywords %}{{ page.meta_keywords }}{% endif %}{% endblock %}
 
 {% block all_content %}
+<div class="jumbotron">
+    <div class="container">
+        <div class="row"><div class="col-md-12">
+            {% editable page.homepage.heading page.homepage.subheading page.homepage.heading_button page.homepage.heading_link %}
+            <h1>{{ page.homepage.heading }}</h1>
+            <p>{{ page.homepage.subheading|linebreaks }}</p>
+            {% if page.homepage.heading_link %}<p><a class="btn btn-primary btn-lg" href="{{ page.homepage.heading_link }}">{{ page.homepage.heading_button }}</a></p>{% endif %}
+            {% endeditable %}
+        </div></div>
+    </div>
+    </div>
 {% if page.homepage.slides.all %}
 <section class="no-margin">
         <div class="carousel slide" data-ride="carousel" id="main-slider">
@@ -53,7 +64,7 @@
                 <div class="carousel-inner">
                     {% for slide in page.homepage.slides.all %}
                    <div class="item{% if forloop.first %} active{% endif %}">
-                       <img src="{{ MEDIA_URL }}{{ slide.image }}"></img>
+                       <img src="{{ MEDIA_URL }}{% thumbnail slide.image 1920 500 %}"></img>
                    </div><!--/.item-->
     
                     {% endfor %}  
@@ -87,17 +98,7 @@
  </section>   
 
 {% endif %}
-    <div class="jumbotron">
-    <div class="container">
-        <div class="row"><div class="col-md-12">
-            {% editable page.homepage.heading page.homepage.subheading page.homepage.heading_button page.homepage.heading_link %}
-            <h1>{{ page.homepage.heading }}</h1>
-            <p>{{ page.homepage.subheading|linebreaks }}</p>
-            {% if page.homepage.heading_link %}<p><a class="btn btn-primary btn-lg" href="{{ page.homepage.heading_link }}">{{ page.homepage.heading_button }}</a></p>{% endif %}
-            {% endeditable %}
-        </div></div>
-    </div>
-    </div>
+
 
 
 
