custom fonts and style changes

--- a/business_theme/static/css/index.css
+++ b/business_theme/static/css/index.css
@@ -6,6 +6,14 @@
     background-color: lightblue;
   }
 
+  .jumbotron h1 {
+    font-family: 'Charmonman', cursive;
+  }
+  .jumbotron p {
+    font-family: 'Roboto', sans-serif;
+  }
+
+
   #main-slider {
     position: relative;
   }
