--- a/business_theme/templates/base.html
+++ b/business_theme/templates/base.html
@@ -35,6 +35,7 @@
 {% endifinstalled %}
 
 <link rel="stylesheet" href="{% static "css/business-theme.css" %}">
+<link href="https://fonts.googleapis.com/css2?family=Charmonman:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
 {% block extra_css %}{% endblock %}
 {% endcompress %}
 
