--- a/business_theme/static/css/business-theme.css
+++ b/business_theme/static/css/business-theme.css
@@ -7,3 +7,11 @@
 footer {
     margin-top: 0px;
 }
+ h1, h2, h3, h4, h5, h6 {
+    font-family: 'Charmonman', cursive;
+    font-weight: bolder;
+    font-variant: small-caps;
+  }
+   p {
+    font-family: 'Roboto', sans-serif;
+  }
