--- a/business_theme/templates/pages/index.html
+++ b/business_theme/templates/pages/index.html
@@ -51,7 +51,7 @@
         <div class="row"><div class="col-md-12">
             {% editable page.homepage.heading page.homepage.subheading page.homepage.heading_button page.homepage.heading_link %}
             <h1>{{ page.homepage.heading|richtext_filters|safe }}</h1>
-            <p>{{ page.homepage.subheading|linebreaks }}</p>
+            <p>{{ page.homepage.subheading|linebreaks|richtext_filters|safe }}</p>
             {% if page.homepage.heading_link %}<p><a class="btn btn-primary btn-lg" href="{{ page.homepage.heading_link }}">{{ page.homepage.heading_button }}</a></p>{% endif %}
             {% endeditable %}
         </div></div>
